--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
             android:theme="@style/Theme.Preferences"
             tools:targetApi="31">
         <activity
-                android:name=".Prefs"
+                android:name=".activitiy.Prefs"
                 android:exported="false"
                 android:label="@string/title_activity_settings"> <meta-data
             android:name="android.support.PARENT_ACTIVITY"
